--- a/IndexLayihe.html
+++ b/IndexLayihe.html
@@ -53,9 +53,9 @@
        <div class="mid">
           <div class="mid-left">  
             <div class="inside-mid-left">
-                <p>TIME IS ALMOST UP</p>
+                <p class="p1">TIME IS ALMOST UP</p>
                 <h2>Design clocks on Sale</h2>
-                <a>Start Shopping</a>
+                <a class="a2">Start Shopping</a>
             </div>
           </div>
           <div class="mid-right">
@@ -66,8 +66,8 @@
           <div class="inside-lower-mid">
             <div class="row1">
                 <div class="inside-row1">
-                  <p>TOP CHOICES</p>
-                  <h3>Popilar this week</h3>
+                  <p class="p10">TOP CHOICES</p>
+                  <h3 class="h10">Popilar this week</h3>
                   <p class="p2">Lorem ipsum sit amet, consectetur adipisicing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
@@ -104,7 +104,14 @@
        <div class="low">
           <div class="inside-low">
             <div class="inside-lowdiv">
-
+               <a class="container2">
+                  <h2 class="h8">Sunn Clock</h2>
+                  <p class="p8">$89.90</p>
+                </a>
+                <p class="p9">S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;N&nbsp;O&nbsp;W</p>
+            </div>
+            <div class="inside-lowdiv2">
+              <img class="img-fluid4" src="https://d19m59y37dris4.cloudfront.net/varkala/1-2-1/img/product/clock-sq.jpg" alt="">
             </div>
           </div>
           <div class="inside-low2">
@@ -122,6 +129,17 @@
           </div>
 
        </div> 
+       <div class="low2-2">
+          <div class="insidelow2-2">
+            <img class="img-fluid5" src="https://d19m59y37dris4.cloudfront.net/varkala/1-2-1/img/product/clock2-sq.jpg" alt="">
+            <div class="bottom-img2">
+               <a class="swiss-container">
+                   <h3 class="h11">Swiss Minutes Black</h3>
+                   <p class="p11">$149.90</p>
+               </a>
+            </div>
+          </div>
+       </div>
 
        
    </div> 
