helede ustunde calisiram

--- a/IndexLayihe.html
+++ b/IndexLayihe.html
@@ -137,8 +137,39 @@
                    <h3 class="h11">Swiss Minutes Black</h3>
                    <p class="p11">$149.90</p>
                </a>
+               <p class="p12">S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;N&nbsp;O&nbsp;W</p>
             </div>
           </div>
+          <div class="insidelow2-3">
+            <a class="a8">
+              <h2 class="h13">Korona dining room &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;chair</h2>
+              <p class="p13">$39.90</p>
+            </a>
+            <p class="p14">S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;N&nbsp;O&nbsp;W</p>
+            <img class="img-fluid6" src="https://d19m59y37dris4.cloudfront.net/varkala/1-2-1/img/product/chair3-3-sq.jpg" alt="">
+          </div>
+       </div>
+       <div class="lowest">
+            <div class="inside-lowest">
+              <div class="inside-insidelowest">
+                 <p class="p15">D&nbsp;E&nbsp;A&nbsp;L&nbsp;&nbsp;O&nbsp;F&nbsp;&nbsp;T&nbsp;H&nbsp;E&nbsp;&nbsp;W&nbsp;E&nbsp;E&nbsp;K</p>
+                 <h3 class="h14">Blackand&nbsp;&nbsp;white&nbsp;&nbsp;<br>Nordegg&nbsp;&nbsp;chairs<br></h3>
+                 <p class="p16">$129.00&nbsp;&nbsp;&nbsp;$79.00</p>
+                 <p class="p17"><span class="span1">$50&nbsp;off</span></p>
+                 <div class="time-container">
+                   <div class="divoftime-container">
+                    <div class="time"><h6 class="h15">14</h6><span class="span2">days</span></div>
+                    <div class="time2"><h6 class="h15">23</h6><span class="span3">hours</span></div>
+                    <div class="time"><h6 class="h15">43</h6><span class="span4">minutes</span></div>
+                    <div class="time"><h6 class="h15">40</h6><span class="span4">seconds</span></div>
+                   </div>
+                 </div>
+                 <p class="p18"><a class="a9"><a class="a10">S&nbsp;H&nbsp;O&nbsp;P&nbsp;&nbsp;&nbsp;N&nbsp;O&nbsp;W</a></a></p>
+              </div>
+              <div class="image-div">
+                <img class="img-fluid7" src="https://d19m59y37dris4.cloudfront.net/varkala/1-2-1/img/product/chair2-transparent.png" alt="" style="max-height: 450px;">
+              </div>
+            </div>
        </div>
 
        
